{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "MovementInput",
            "id": "d749ac3c-0b6f-4e55-9a4c-796189ab167a",
            "actions": [
                {
                    "name": "KeyboardMovement",
                    "type": "PassThrough",
                    "id": "eead5e0a-0c1c-42e9-93c3-a88523497f98",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "777ab618-e756-4b0d-8b54-951c7356ce0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "mouse",
                    "type": "PassThrough",
                    "id": "8816bbb8-31c5-403b-959b-0037017208bc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "185f7200-c9ed-4987-b4bf-63958ca39345",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "921b0bc8-417f-49ca-939b-81e1465b2b2a",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "d1b24ada-da0f-4295-adf3-57a667406cca",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "7f305627-29a2-48d0-8af6-caaa990c3090",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "359af8f4-7398-4d71-b57c-3bae3197a7c7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "eee8bcd5-81b4-42dc-b023-3b0b6f950d13",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyboardMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0af766f4-9248-401d-8ac7-3a13cf3c0040",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ControllerMovementInput",
            "id": "cb42d182-a5a9-4035-9b2b-9605d504aecf",
            "actions": [
                {
                    "name": "ContollerMovement",
                    "type": "PassThrough",
                    "id": "c1437dfb-591b-403e-afa6-6a819124f066",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Test",
                    "type": "PassThrough",
                    "id": "38759fc1-ed4e-485a-b218-1efb0d4bba70",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "3ea1b7b1-b7fd-4569-89c1-555b6e65a420",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseLeftArm",
                    "type": "Button",
                    "id": "8a1f8274-04e1-4f11-81a2-398a0f3aaef7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseRightArm",
                    "type": "Button",
                    "id": "61acc4f8-e310-4d3c-86de-905ac9b1c74e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1387de2b-d3d0-458a-a372-40442fc0d842",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ContollerMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74991e13-afc6-4cc8-ba76-9deadffa5d6d",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Test",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e009ee8f-421b-4dbf-b975-b0240caa26c7",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8de752d-8129-4afb-aef8-9d526c9e04d8",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseLeftArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7affc0ab-def9-4db6-8c00-9bce8015cdba",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseRightArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}